# update-ou-for-events

./: .gitignore  .pdm-python  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-macos.yml
dhis2_event_tool/: fetch_events.py  map_events.py  utils.py
scripts/: fetch.py  main.py  map.py
